Added the updates for the ParallelBFSPreprocessing algorithms